# reasoning-traces

./: .gitignore  .mcp.json  CLAUDE.md  README.md  mcp-config.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
commands/: reason.md
examples/: README.md  run_demo.py
examples/coding/: README.md  run.py
examples/coding/results/: results.json
examples/coding/results/tasks/: frontend_04_performance_optimization.md  python_03_exactly_once_task_processor_distributed_.md  python_06_streaming_join_engine.md  python_08_adaptive_circuit_breaker.md  python_09_distributed_lock_with_fencing_tokens.md  python_13_crdt_for_collaborative_text_editing.md
examples/coding/tasks/: frontend_04_performance_optimization.json  python_03_exactly_once_task_processor_distributed_.json  python_06_streaming_join_engine.json  python_08_adaptive_circuit_breaker.json  python_09_distributed_lock_with_fencing_tokens.json  python_13_crdt_for_collaborative_text_editing.json
examples/results/: results.json  summary.md
examples/results/tasks/: 01_trigger_bulkification.md  02_governor_limits_math.md  03_soql_semijoin.md  04_batch_stateful.md  05_cpq_proration.md
examples/tasks/: 01_trigger_bulkification.json  02_governor_limits_math.json  03_soql_semijoin.json  04_batch_stateful.json  05_cpq_proration.json
reasoning_traces/: __init__.py  backends.py  server.py
