[project]
name = "reasoning-traces"
version = "0.1.0"
description = "MCP server that gives coding agents a stronger reasoning model's reasoning trace"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dhruv", email = "dhruv@corethink.ai" }]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "anthropic>=0.50",
    "httpx>=0.27",
]
keywords = ["mcp", "claude-code", "reasoning", "llm"]

[project.urls]
Repository = "https://github.com/dhruv-corethink/reasoning-traces"

[project.scripts]
reasoning-traces = "reasoning_traces.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reasoning_traces"]
